[package]
name = "bevy_mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
#bevy_clicking = { path = "../clicking" }
bevy_clicking = { git = "https://github.com/matelab/bevy_clicking" }
